<package>
  <name>rviz_plugin_server</name>
  <version>0.10.1</version>
  <description>
     Tutorials showing how to write plugins for RViz.
  </description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/rviz_plugin_tutorials</url>
  <author>Dave Hershberger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>message_generation</build_depend>

  <build_depend>interactive_markers</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>


  
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>interactive_markers</run_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>

  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
<build_depend>message_generation</build_depend><run_depend>message_runtime</run_depend></package>